--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.9.1
 Django==5.2
 django-cors-headers==4.8.0
+django-filter==25.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.10
+gunicorn==23.0.0
 inflection==0.5.1
 packaging==25.0
 pillow==11.3.0
